[tool.poetry]
name = "ps-typer"
version = "0.1.5"
readme="README.md"
description = "A Python program built on the PyQt5 GUI framework, used for practicing your typing skills and keeping track of your progress."
authors = ["Rolv-Apneseth <rolv.apneseth@gmail.com>"]
homepage = "https://github.com/Rolv-Apneseth/ps-typer"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
DateTime = "^4.4"
PyQt5 = "^5.15.6"
pyqtgraph = "^0.12.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.931"
types-requests = "^2.27.9"
types-beautifulsoup4 = "^4.10.11"
pytest = "^7.0.0"
codespell = "^2.1.0"
flake8 = "^4.0.1"
flake8-black = "^0.2.4"
flake8-isort = "^4.1.1"
flake8-tidy-imports = "^4.6.0"

[tool.poetry.scripts]
ps-typer = "ps_typer.main:main"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
